# docx-you-want

./: .gitignore  Cargo.toml  README.md
fixtures/: [Content_Types].xml
fixtures/_rels/: .rels
fixtures/word/: document.xml
fixtures/word/_rels/: document.xml.rels
src/: lib.rs  main.rs
