[package]
name = "docx-you-want"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minidom = "0.13.0"
tempfile = "3"
fs_extra = "1.2.0"
resvg = "0.15.0"
usvg = "0.15.0"
tiny-skia = "0.5.1"
png = "0.16.8"
format_xml = "0.2.0"